--- a/public/questionnaire/q/ques.css
+++ b/public/questionnaire/q/ques.css
@@ -1,12 +1,12 @@
-@import url(https://fonts.googleapis.com/css?family=Work+Sans:300,600);
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
         body{
             font-size: 20px;
-            font-family: 'Work Sans', sans-serif;
+            font-family: 'Nunito', sans-serif;
             color: #333;
             font-weight: 300;
             text-align: center;
-            background-color: #f8f6f0;
+            background-color: #f1e5ef;
             }
             h1{
             font-weight: 300;
@@ -32,16 +32,17 @@
         button{
         font-family: 'Work Sans', sans-serif;
             font-size: 22px;
-            background-color: #279;
+            background-color: #761678;
             color: #fff;
             border: 0px;
             border-radius: 3px;
             padding: 20px;
             cursor: pointer;
             margin-bottom: 20px;
+            margin-top: 20px;
         }
         button:hover{
-            background-color: #38a;
+            background-color: #b143b3;
         }
 
         .slide{
@@ -50,15 +51,22 @@
         top: 0px;
         width: 100%;
         z-index: 1;
-        opacity: 0;
+        display: none;
         transition: opacity 0.5s;
         }
         .active-slide{
         opacity: 1;
         z-index: 2;
+        display: initial;
         }
         .quiz-container{
         position: relative;
         height: 200px;
         margin-top: 40px;
+        }
+
+        form {
+            display: block;
+            background-color: white;
+            padding: 10px;
         }
