--- a/templates/capture.html
+++ b/templates/capture.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Emotion Detection | Vyavahaar</title>
+    <title>Emotion Detection</title>
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.25/webcam.js"
@@ -12,8 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="\static\photo\style.css" />
-    <!-- <link rel="shortcut icon" href=/static/logo.png" type="image/x-icon"> -->
+    <link rel="stylesheet" href="\static\css\photo_style.css" />
+    <link rel="shortcut icon" href=/static/images/logo.png" type="image/x-icon">
   </head>
   <body>
     <div class="nav">
@@ -38,7 +38,7 @@
         Click a photo! Our state of the art face recognition system will
         identify your emotions and generate a personalised report.<img
           class="ques-image"
-          src="/static/photo/face.jpg"
+          src="/static/images/face.jpg"
           alt="face"
         /><br />
       </p>
