--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <title>Vyavhaar</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <script src="static/js/app.js"></script>
 </head>
 <style>
     body {
@@ -202,8 +203,8 @@
 <body>
 
     <div class="topnav">
-        <img class="logo" src="static/images/logo.jpeg" width="80" height="80" alt="logo">
-        <a href="static/login/login.html">Login</a>
+        <img class="logo" src="static\images\v26_2.png" width="80" height="80" alt="logo">
+        <a href="/login">Login</a>
         <a href="/about">About</a>
         <a class=" active " href="#home ">Home</a>
     </div>
@@ -365,11 +366,6 @@
         firebase.initializeApp(firebaseConfig);
     </script>
 
-
-
-
-    <!-- Custom JavaScript -->
-    <script src="static/login/app.js"></script>
 </body>
 
 </html>
