--- a/templates/capture.html
+++ b/templates/capture.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="nav">
-      <a href="\"
+      <a href="/user"
         ><p
           style="
             padding: 5px;
