--- a/templates/emotions.html
+++ b/templates/emotions.html
@@ -50,7 +50,7 @@
         <h1>Emotion Detection</h1>
         <p>Find your Emotions with just one picture</p>
         <p>
-          <a href="/"><p>Back to home</p></a>
+          <a href="/user"><p>Back to home</p></a>
         </p>
       </div>
 
