--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -31,8 +31,8 @@
 </style>
 <body class="bg-light">
     <div class="container-fluid" style="background-color: #ffffff;">
-        <img  class="d-none d-sm-block img-fluid" src="../images/logo.jpeg" width="120" height="100" class="float-left" alt="logo">
-        <img  class="d-sm-none img-fluid" src="../images/logo.jpeg" width="80" height="60" class="float-left" alt="logo">
+        <img  class="d-none d-sm-block img-fluid" src="../static/images/logo.jpeg" width="120" height="100" class="float-left" alt="logo">
+        <img  class="d-sm-none img-fluid" src="../static/images/logo.jpeg" width="80" height="60" class="float-left" alt="logo">
         
         <div class="row mx-1" style="background-color: #ffffff;">
             <div class="col-lg-10 col-md-10 col-sm-10 offset-lg-1 offset-md-1 offset-sm-1 text-center mt-5 text-primary">
@@ -40,8 +40,8 @@
             <div class="col-lg-10 col-md-10 col-sm-10 offset-lg-1 offset-md-1 offset-sm-1 bg-white mb-5 ">
                 <div class="row" style="background-color: #ffffff;">
                     <div class="white col-lg-8 col-md-6 col-sm-6 p-6 hidden-sm divCover">
-                        <img class="d-none d-sm-block img-fluid" src="../images/b.jpeg"   alt="sign-up cover image" >
-                        <img class="d-sm-none img-fluid" src="../images/b.jpeg" width="330" height="250" alt="sign-up cover image" >
+                        <img class="d-none d-sm-block img-fluid" src="../static/images/b.jpeg"   alt="sign-up cover image" >
+                        <img class="d-sm-none img-fluid" src="../static/images/b.jpeg" width="330" height="250" alt="sign-up cover image" >
                         <div>
                             <br>
                             <h2 style="color: #761678; font-weight: bold;">You dont have to suffer in silence</h2>
@@ -73,7 +73,7 @@
                                 <small id="userPasswordError" class="form-text text-danger">Your password must be uppercase, lowercase and more than 10 characters.</small>
                             </div>
                             <button type="button" class="btn btn-primary btn-lg btn-block mb-3" style="border-radius: 25px; padding: 8px;background-color: #761678;" onclick="signUp()">Sign Up</button>
-                            <p style="color: #761678; font-weight: bold;">Already a member? Sign in: <a href="login.html"><strong class="text-primary text-uppercase showSignInForm">Sign In</strong></a></p>
+                            <p style="color: #761678; font-weight: bold;">Already a member? Sign in: <a href="/login"><strong class="text-primary text-uppercase showSignInForm">Sign In</strong></a></p>
                         </div>
                     </div>
                 </div>
